frontend/src/styles.css
/* ... */
  
  .shorterSelect .Select-placeholder{
	  line-height: 27px;
  }
  
  .expandedSelect{
	  height: fit-content !important;
  }
  
  .expandedSelect .Select-value {
	  height: fit-content !important;
	  line-height: 22px !important;
	  display: contents;
	  white-space: unset !important;
  }
  
  .expandedSelect .Select-multi-value-wrapper {
	  height: fit-content !important;
	  padding: 0px 10px;
  }
  
  .expandedSelect .Select-control {
	  height: fit-content !important;
  }
  
  .expandedSelect .Select-input{
	  height: fit-content !important;
  }
  
  .expandedSelect .Select-value-label{
	  height: fit-content !important;
	  line-height: 22px;
  }
  
  .expandedSelect .Select-placeholder{
	  line-height: 27px;
  }
  
  .darkPlaceholder .Select-placeholder{
	  color: rgb(60, 65, 68);
  }
  
  .react-grid-Row{
	  contain: unset !important;
  }
  
  .Select-option {
	  padding: 5px 10px;
  }
  
  .reactTableFixedHeaderWrap .rt-thead .rt-th{
	  white-space: normal !important;
  }
  
  .negativeTop25 {
	  top: -25px;
  }
  
  /* user dialog */
  .rct-icon,
  .rct-title {
	font-size: 13px;
  }
  
  .rct-text {
	height: 100%;
  }
  
  div.uot-text-field-container > div {
	font-size: 13px !important;
	line-height: 23px !important;
	height: 25px !important;
  }
  /* end user dialog */
  
  .reactTable-Selected-Row {
	  background-color: rgba(0, 131, 143, .3) !important;
  }
  
  .reactTable-Disabled-Row{
	  background-color: rgba(255, 82, 0, .3) !important;
  }
  
  .reactTable-Suballotted-Row {
	  background-color: rgba(0, 173, 23, .3) !important;
  }
  
  .reactTable-Default-Row{
	  background-color: white;
  }
  
  /*========== fsd-table-panel ===========*/
  
  .resized-9 {
	flex-basis: 81% !important;
	max-width: 81% !important;
  }
  
  .resized-1 {
	flex-basis: 6.333% !important;
	max-width: 6.333% !important;
  }
  
  /*========== Media Queries ============*/
  
  @media all and (min-width: 1400px) {
	.resized-1 {
	  flex-basis: 4.333% !important;
	  max-width: 4.333% !important;
	}
	.resized-9 {
	  flex-basis: 87% !important;
	  max-width: 87% !important;
	}
  }
  
  @media all and (max-width: 1200px) {
	.resized-1 {
	  flex-basis: 4.333% !important;
	  max-width: 4.333% !important;
	}
  
  }
  @media all and (max-width: 1199px) {
	.resized-1 {
	  flex-basis: 8.333% !important;
	  max-width: 8.333% !important;
	}
	.resized-9 {
	  flex-basis: 75% !important;
	  max-width: 75% !important;
	}
  }
  
  @media all and (max-width: 768px) {
  
	.resized-1 {
	  flex-basis: 6.333% !important;
	  max-width: 6.333% !important;
	}
  
  }
  @media all and (max-width: 575px) {}
  
  .review-level-select .Select-menu-outer {
	font-size: 13px !important;
  }
  
  .higherZSelect .Select-menu-outer {
	  z-index: 1000 !important;
  }
  
  .review-level-select .review-level-removal-warning .Select-value-label {
	color: #ED5C46 !important;
  }
  
  /* darq admin page */
  
  #darq-admin-table .drag-handle { 
	display: none; 
  }
  
  .rdgCenterCell.darq-admin-page-filterable input.form-control {
	text-align: center;
  }
  
  .react-grid-HeaderCell.rdgCenterCell.role.darq-admin-header.darq-admin-header-label {
	color: #00838f;
  }
  
  .darq-admin-page-tooltip {
	font-size: 13px !important;
  }
  
  div.react-grid-Container div.darq-admin-page-filterable.component.react-grid-Cell:hover {
	border: 2px solid #60B2EC;
  }
  
  div.unselectedDarqAdminFilterBtn {
	background-color: #fff;
	color: rgb(0, 131, 143);
  }
  
  div.selectedDarqAdminFilterBtn {
	background-color:  rgb(0, 131, 143);
	color: #fff;
  }
  
  /* darq admin page */
  
  .disableTextHighlighting {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
  }
  
  .rtPaddinglessFooter .rt-tfoot .rt-td {
	  padding: 0px;
  }
  
  /* management tracking report */
  .rt-th.mgmt-tracking-report-header {
	white-space: unset;
  }
  
  /* darq page */
  #downshift-simple-menu {
	height: 0px;
  }
  
  .darq-non-table-tooltip {
	height: 30px !important;
	line-height: 15px !important;
  }
  
  ul.pagination li.active a {
	z-index: 1 !important;
  }
  
  #disapproveAssignee .MuiSvgIcon-root {
	color: #00838F !important;
  }
  
  #disapproveAssignee span {
	background-color: transparent !important;
  }
  
  /* darq assign dialog */
  .darq-assign-dialog-body {
	max-height: 1200px !important;
  }
  
  /* Card flipping animation */
  .flip-card {
	  height: 280px; 
	  background-color: transparent;
	  border: solid 4px transparent;
	  perspective: 1000px;
	}
	
	/* This container is needed to position the front and back side */
	.flip-card-inner {
	  position: relative;
	  width: 100%;
	  height: 100%;
	  text-align: center;
	  transition: transform .5s !important;
	  transform-style: preserve-3d !important;
	  box-shadow: none;
	}
	
	/* Do an horizontal flip when you move the mouse over the flip box container */
	.flip-card:hover:not(.flip-card-controlled) .flip-card-inner {
	  transition-delay: .25s;
	  transform: rotateY(180deg);
	}
  
	.flip-card-controlled.flip-card-controlled-flipped .flip-card-inner {
	  transition-delay: .25s;
	  transform: rotateY(180deg);
	}
	
	/* Position the front and back side */
	.flip-card-front, .flip-card-back {
	  position: absolute;
	  width: 100%;
	  height: 100%;
	  backface-visibility: hidden;
	}
	
	/* Style the back side */
	.flip-card-back {
	  transform: rotateY(180deg);
	  box-shadow: none;
	}
  
	.btnAsLink {
	  background:none!important;
	  border:none; 
	  padding:0!important;
	  text-decoration:underline;
	  cursor:pointer;
	  color: #069;
	}
  
  .darqReportReactTable .rt-tr-group:hover .rt-td {
	  background: transparent !important;
  }
  
  /* darq osd progress summary */
  .progressSummary .rt-th.-sort-asc.-cursor-pointer {
	box-shadow: inset 0 3px 0 0 #00838F;
  }
  
  .progressSummary .rt-th.-sort-desc.-cursor-pointer {
	box-shadow: inset 0 -3px 0 0 #00838F;
  }
/* ... */

